# project_bci

./: .gitignore  test.cpp
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/acquisition_biosemi/: .catkin  .rosinstall
devel/.private/acquisition_biosemi/include/acquisition_biosemi/: biosemi_echantillon.h  biosemi_result.h
devel/.private/acquisition_biosemi/lib/acquisition_biosemi/: biosemi_listener  biosemi_simul  biosemi_talker
devel/.private/acquisition_biosemi/lib/pkgconfig/: acquisition_biosemi.pc
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/include/acquisition_biosemi/: biosemi_echantillon.h  biosemi_result.h
devel/lib/acquisition_biosemi/: biosemi_listener  biosemi_simul  biosemi_talker
devel/lib/pkgconfig/: acquisition_biosemi.pc  catkin_tools_prebuild.pc
devel/lib/python2.7/dist-packages/acquisition_biosemi/: __init__.py
devel/lib/python2.7/dist-packages/acquisition_biosemi/msg/: __init__.py  _biosemi_echantillon.py  (+1 more)
devel/share/acquisition_biosemi/cmake/: acquisition_biosemi-msg-extras.cmake  acquisition_biosemi-msg-paths.cmake  acquisition_biosemiConfig-version.cmake  acquisition_biosemiConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/gennodejs/ros/acquisition_biosemi/: _index.js
devel/share/roseus/ros/acquisition_biosemi/: manifest.l
documentation/: Index of _.html  serie.c  serie.h
documentation/koala/koala_description/: CMakeLists.txt  package.xml  test.launch
documentation/koala/koala_description/meshes/: base.blend  base.stl
documentation/koala/koala_description/robots/: koala2_silver.urdf.xacro
documentation/koala/koala_description/test/: test_urdf.cpp
documentation/koala/koala_description/urdf/: koala2_silver.urdf.xacro  koala_library.urdf.xacro
documentation/koala/koala_description/urdf/sensors/: camera.urdf.xacro
documentation/koala/koala_description/urdf/stacks/: picoitx.urdf.xacro
documentation/koala/koala_driver/: CMakeLists.txt  package.xml
documentation/koala/koala_driver/include/: koala_camera_position.h  koala_driver.h  koala_video.h  koala_wheels.h
documentation/koala/koala_driver/scripts/: calibrate_ir.py
documentation/koala/koala_driver/src/: CMakeLists.txt  koala_camera_position.cpp  koala_video.cpp  koala_wheels.cpp
documentation/koala/koala_node/: CMakeLists.txt  package.xml
documentation/koala/koala_node/launch/: bringup.launch
documentation/koala/koala_node/share/: camera_info.ini
documentation/koala/koala_node/src/: CMakeLists.txt  camera_node.cpp  camera_position_node.cpp  wheels_node.cpp
documentation/kteams/kteams_driver/: CMakeLists.txt  package.xml
documentation/kteams/kteams_driver/include/: khepera_wheels_ir.h  koala_camera_position.h  koala_video.h  koala_wheels.h  kteams_driver.h
documentation/kteams/kteams_driver/scripts/: calibrate_ir_khepera.py
documentation/kteams/kteams_driver/src/: CMakeLists.txt  khepera_wheels_ir.cpp  koala_camera_position.cpp  koala_video.cpp  koala_wheels.cpp
documentation/kteams/kteams_node/: CMakeLists.txt  package.xml
documentation/kteams/kteams_node/config/: joy_teleop.yaml
documentation/kteams/kteams_node/launch/: khepera_bringup.launch  koala_bringup.launch
documentation/kteams/kteams_node/scripts/: joy_teleop.py
documentation/kteams/kteams_node/share/: camera_info.yml
documentation/kteams/kteams_node/src/: CMakeLists.txt  khepera_wheels_node.cpp  koala_camera_node.cpp  koala_camera_position_node.cpp  koala_odom_node.cpp  koala_wheels_node.cpp
matlab/: herve001.txt  herve002.txt  test.m
src/acquisition_biosemi/: CMakeLists.txt
src/acquisition_biosemi/Enregistrements/: herve001.txt  herve003.txt
src/acquisition_biosemi/msg/: biosemi_echantillon.msg  biosemi_result.msg
src/acquisition_biosemi/src/: biosemi_listener.cpp  biosemi_simul.cpp  biosemi_talker.cpp
(+30 files in other folders)
